# PY2OTUS

./: README.md  gitignore  pyproject.toml
.github/workflows/: ci.yml
HW1/: Dockerfile  README.md  parser.py
