[tool.poetry]
name = "py2otus"
version = "0.1.0"
description = ""
authors = ["sokratov <esokratov@astralinux.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pylint = "^3.3.1"
astroid = "^3.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
